example/nginx-ingress-path/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
     - http:
        paths:
        - path: /nginx
          backend:
            serviceName: nginx-test
            servicePort: 80
